--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div class="main-visual">
       <div class="main-visual-content">
         <p class="main-visual-text">
-          The world is a book and those who do not travel read only one page.
+          The world is a book<<br />
+          and those who do not travel<br />
+          read only one page.
         </p>
         <p class="main-visual-name">
           St. Augustine
@@ -37,10 +39,31 @@
     </div>
 
     <!-- main用のdiv -->
-    <div class="main">
-      <div class="blog"></div>
-      <div class="sidebar"></div>
-    </div>
+    <main>
+      <div class="main">
+        <section class="blog">
+          <h2 class="blog-heading">Recent Blogs</h2>
+
+          <div class="blog-box">
+            <div class="blog-item">
+              <img class="blog-image" src="img/forest.jpg" />
+              <section class="blog-text">
+                <h3>
+                  <a href="single.html">
+                    Hopeful lessons from<br />
+                    the battole to save<br />
+                    rainforests
+                  </a>
+                </h3>
+                <p class="blog-date">June 19, 2017</p>
+                <span class="category">Nature</span>
+              </section>
+            </div>
+          </div>
+        </section>
+        <div class="sidebar"></div>
+      </div>
+    </main>
 
     <!-- footer -->
     <footer>
