--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charaset="UTF-8" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css"  />
-    <title>CARVAN</title>
+    <title>CARAVAN</title>
   </head>
   <body>
     <!-- header -->
     <header>
       <h1 class="heading">
-        <a href="index.html">CARVAN</a>
+        <a href="index.html">CARAVAN</a>
       </h1>
     </header>
 
@@ -28,7 +28,7 @@
     <div class="main-visual">
       <div class="main-visual-content">
         <p class="main-visual-text">
-          The world is a book<<br />
+          The world is a book<br />
           and those who do not travel<br />
           read only one page.
         </p>
@@ -40,34 +40,90 @@
 
     <!-- main用のdiv -->
     <main>
-      <div class="main">
-        <section class="blog">
-          <h2 class="blog-heading">Recent Blogs</h2>
+      <section class="blog">
+        <h2 class="blog-heading">Recent Blogs</h2>
 
-          <div class="blog-box">
-            <div class="blog-item">
-              <img class="blog-image" src="img/forest.jpg" />
-              <section class="blog-text">
-                <h3>
-                  <a href="single.html">
-                    Hopeful lessons from<br />
-                    the battole to save<br />
-                    rainforests
-                  </a>
-                </h3>
-                <p class="blog-date">June 19, 2017</p>
-                <span class="category">Nature</span>
-              </section>
-            </div>
+        <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/forest.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Hopeful lessons from<br />
+                  the battle to save<br />
+                  rainforests
+                </a>
+              </h3>
+              <p class="blog-date">June 19, 2017</p>
+              <span class="category">Nature</span>
+            </section>
           </div>
-        </section>
-        <div class="sidebar"></div>
-      </div>
+
+          <div class="blog-item">
+            <img class="blog-image" src="img/desert.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  How to fight<br />
+                  desertification and<br />
+                  reverse climate change
+                </a>
+              </h3>
+              <p class="blog-date">June 17, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+
+          <div class="blog-item">
+            <img class="blog-image" src="img/sunset.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Why I'm rowing<br />
+                  across the Pacific
+                </a>
+              </h3>
+              <p class="blog-date">June 16, 2017</p>
+              <span class="category">Adventure</span>
+            </section>
+          </div>
+
+          <div class="blog-item">
+            <img class="blog-image" src="img/italy.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Unseen footage,<br />
+                  untamed nature
+                </a>
+              </h3>
+              <p class="blog-date">June 15, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+
+          <div class="blog-item">
+            <img class="blog-image" src="img/asia.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  The case for<br />
+                  engineering our food
+                </a>
+              </h3>
+              <p class="blog-date">June 14, 2017</p>
+              <span class="category">Culture</span>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <div class="sidebar"></div>
     </main>
 
     <!-- footer -->
     <footer>
-      <p class="footer-text">@ All rights reserved by Infratop.Inc.</p>
+      <p class="footer-text">©︎ All rights reserved by Infratop.Inc.</p>
     </footer>
   </body>
 </html>
