--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css"  />
+    <script src="https://kit.fontawesome.com/64e9ac69ea.js" crossorigin="anonymous"></script>
     <title>CARAVAN</title>
   </head>
   <body>
@@ -11,6 +12,19 @@
       <h1 class="heading">
         <a href="index.html">CARAVAN</a>
       </h1>
+
+      <div class="social">
+
+        <a href="https://www.facebook.com/">
+          <i class="fab fa-facebook-square"></i>
+        </a>
+        <a href="https://twitter.com/">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <a href="https://www.instagram.com/">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
     </header>
 
     <!-- navigation -->
@@ -24,7 +38,7 @@
       </ul>
     </nav>
 
-    <!--main-visual用のdiv-->
+    <!-- main-visual用のdiv -->
     <div class="main-visual">
       <div class="main-visual-content">
         <p class="main-visual-text">
@@ -116,9 +130,53 @@
             </section>
           </div>
         </div>
+
+        <div class="pagination">
+          <p><<</p>
+          <p><</p>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
+          <p>></p>
+          <p>>></p>
+        </div>
       </section>
 
-      <div class="sidebar"></div>
+      <div class="sidebar">
+        <section class="popular">
+          <h2 class="sidebar-heading common-heading">Popular</h2>
+          <div class="sidebar-contents">
+            <p class="popular-text">To solve old problems,<br />study new species</p>
+            <p class="popular-text">Why Earth may someday<br />look like Mars</p>
+            <p class="popular-text">What will humans look<br />like in 100 years?</p>
+            <p class="popular-text">How to grow a forest<br />in your backyard</p>
+            <p class="popular-text">How humans could evolve<br />to survive in space</p>
+          </div>
+        </section>
+        <section class="instagram">
+          <h2 class="instagram-heading common-heading">Instagram</h2>
+          <div class="sidebar-contents">
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+          </div>
+        </section>
+        <section class="categories">
+          <h2 class="categories-heading common-heading">Categories</h2>
+          <div class="sidebar-contents">
+            <p class="categories-text">Technology(15)</p>
+            <p class="categories-text">Business(23)</p>
+            <p class="categories-text">Entertainment(12)</p>
+            <p class="categories-text">Nature(32)</p>
+            <p class="categories-text">Education(9)</p>
+            <p class="categories-text">Adventure(23)</p>
+            <p class="categories-text">Communication(14)</p>
+          </div>
+        </section>
+      </div>
     </main>
 
     <!-- footer -->
